# broken-cabal-test

./: Main.hs  cabal.project.local  sample.cabal
dep/foo/: Foo.hs  foo.cabal
foo/: Foo.hs  foo.cabal
