name:             sample
version:          0.1.0.0
license:          BSD3
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2017 Getty Ritter
build-type:       Simple
cabal-version:    >= 1.14

executable sample
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base, foo >= 0.2.0.0
  default-language:    Haskell2010
