name:             foo
version:          0.2.0.0
license:          BSD3
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2017 Getty Ritter
build-type:       Simple
cabal-version:    >= 1.14

library
  exposed-modules:     Foo
  ghc-options:         -Wall
  build-depends:       base
  default-language:    Haskell2010
